<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>phileas</artifactId>
	<groupId>ai.philterd</groupId>
	<packaging>pom</packaging>
	<version>2.5.0-SNAPSHOT</version>
	<name>phileas</name>
	<url>https://www.philterd.ai</url>
	<description>Phileas is a library for identifying and redacting sensitive information from natural language text.</description>
	<inceptionYear>2019</inceptionYear>
	<organization>
		<name>Philterd, LLC</name>
		<url>https://www.philterd.ai</url>
	</organization>
	<scm>
		<connection>scm:git@github.com:philterd/phileas.git</connection>
		<developerConnection>scm:git@github.com:philterd/phileas.git</developerConnection>
		<url>https://github.com/philterd/phileas/</url>
	</scm>
	<developers>
		<developer>
			<name>Philterd, LLC</name>
			<email>support@philterd.ai</email>
			<organization>Philterd</organization>
			<organizationUrl>https://www.philterd.ai</organizationUrl>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>Apache License, version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<distributionManagement>
	   <repository>
	     <id>github</id>
	     <name>GitHub Philterd/Phileas Apache Maven Packages</name>
	     <url>https://maven.pkg.github.com/philterd/phileas</url>
	   </repository>
	</distributionManagement>
	<repositories>
		<repository>
		  <id>central</id>
		  <url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/philterd/phileas</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<modules>
		<module>phileas-core</module>
		<module>phileas-model</module>
		<module>phileas-services</module>
		<module>phileas-configuration</module>
		<module>phileas-processors</module>
		<module>owner</module>
  	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- Project dependency versions -->
		<antlr.version>4.8-1</antlr.version>
		<aws.version>1.12.380</aws.version>
		<commons.collections4.version>4.4</commons.collections4.version>
		<commons.lang3.version>3.12.0</commons.lang3.version>
		<commons.logging.version>1.2</commons.logging.version>
		<commons.codec.version>1.15</commons.codec.version>
		<commons.csv.version>1.9.0</commons.csv.version>
		<commons.io.version>2.11.0</commons.io.version>
		<commons.math.version>3.6.1</commons.math.version>
		<commons.text.version>1.10.0</commons.text.version>
		<commons.validator.version>1.7</commons.validator.version>
		<dropwizard.metrics.version>4.1.7</dropwizard.metrics.version>
		<dropwizard-metrics-cloudwatch.version>1.0.13</dropwizard-metrics-cloudwatch.version>
		<dropwizard-metrics-datadog.version>1.1.14</dropwizard-metrics-datadog.version>
		<equals.verifier.version>3.14.2</equals.verifier.version>
		<ff3.version>1.0</ff3.version>
		<guava.version>30.1-jre</guava.version>
		<hapi.fhir.version>4.2.0</hapi.fhir.version>
		<gson.version>2.10.1</gson.version>
		<icu4j.version>67.1</icu4j.version>
		<javafaker.version>1.0.2</javafaker.version>
		<json.version>20220924</json.version>
		<jsoup.version>1.15.3</jsoup.version>
		<junit.version>5.9.1</junit.version>
		<libphonenumber.version>8.13.4</libphonenumber.version>
		<log4j.version>2.19.0</log4j.version>
		<lucene.version>8.3.0</lucene.version>
		<micrometer.version>1.10.2</micrometer.version>
		<mockito.version>5.4.0</mockito.version>
		<nv-i18n.version>1.27</nv-i18n.version>
		<opennlp.version>2.1.0</opennlp.version>
		<pdfbox.version>2.0.23</pdfbox.version>
		<redis-mock.version>0.1.6</redis-mock.version>
		<redisson.version>3.19.1</redisson.version>
		<retrofit.version>2.9.0</retrofit.version>
		<scala.major.version>2.12</scala.major.version>
		<segment.version>2.0.1</segment.version>
		<spring.boot.version>2.1.8.RELEASE</spring.boot.version>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.3.2</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>-Xmx8g --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
					<excludes>
						<exclude>**/*IT.java</exclude>
					</excludes>
			        <systemPropertyVariables>
			            <jacoco-agent.destfile>**/jacoco.exec</jacoco-agent.destfile>
			        </systemPropertyVariables>					
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<includes>
						<include>**/*IT.java</include>
					</includes>
					<skipITs>true</skipITs>
				</configuration>
				<executions>
					<execution>
						<id>failsafe-integration-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.19</version>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-enforcer-plugin</artifactId>
			  <version>3.0.0</version>
			  <executions>
			    <execution>
			      <id>ban-bad-log4j-versions</id>
			      <phase>validate</phase>
			      <goals>
			        <goal>enforce</goal>
			      </goals>
			      <configuration>
			        <rules>
			          <bannedDependencies>
			            <excludes>
			              <exclude>org.apache.logging.log4j:log4j-core:(,2.15.0)</exclude>
			            </excludes>
			          </bannedDependencies>
			        </rules>
			        <fail>true</fail>
			      </configuration>
			    </execution>
			  </executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
				<configuration>
					<destFile>>${project.build.directory}/jacoco.exec</destFile>
					<append>true</append>
				</configuration>
				<executions>
					<execution>
						<id>agent</id>
						<goals>
							<goal>prepare-agent</goal>
							<goal>report-aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>	
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>it</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>it</name>
				</property>
			</activation>
			<build>
		    <plugins>
		      <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-failsafe-plugin</artifactId>
		        <version>2.22.2</version>
						<configuration>
								<skipITs>false</skipITs>
						</configuration>
		        <executions>
		          <execution>
		            <goals>
		              <goal>integration-test</goal>
		              <goal>verify</goal>
		            </goals>
		          </execution>
		        </executions>
		      </plugin>
		    </plugins>
		  </build>
		</profile>
		<profile>
			<id>owasp</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>owasp</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>5.3.2</version>
						<inherited>false</inherited>
						<configuration>
							<retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
							<failOnError>false</failOnError>
							<failBuildOnAnyVulnerability>false</failBuildOnAnyVulnerability>
							<format>ALL</format>
							<skipProvidedScope>true</skipProvidedScope>
							<skipTestScope>true</skipTestScope>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
